# myProject

devel/: .catkin  .rosinstall  setup.sh
devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h
devel/include/image_rotate/: ImageRotateConfig.h
devel/include/nao_interaction_msgs/: AudioMasterVolumeRequest.h  AudioMasterVolumeResponse.h  AudioPlaybackRequest.h  AudioPlaybackResponse.h  AudioRecorderRequest.h  AudioRecorderResponse.h  AudioSourceLocalization.h  FaceDetected.h  LandmarkDetected.h  LearnFaceRequest.h  LearnFaceResponse.h  MovementDetected.h  VisionMotionSensitivityRequest.h  VisionMotionSensitivityResponse.h
devel/include/stereo_image_proc/: DisparityConfig.h
devel/lib/camera_nav/: camera_nav  talker
devel/lib/hello/: hello
devel/lib/image_proc/: image_proc
devel/lib/image_rotate/: image_rotate
devel/lib/image_view/: disparity_view  extract_images  image_saver  image_view  stereo_view  video_recorder
devel/lib/nao_description/: base_footprint
devel/lib/pkgconfig/: camera_calibration.pc  camera_nav.pc  depth_image_proc.pc  face_recognize.pc  hello.pc  image_proc.pc  image_rotate.pc  image_view.pc  nao_apps.pc  nao_audio.pc  nao_bringup.pc  nao_description.pc  nao_interaction_launchers.pc  nao_interaction_msgs.pc  nao_vision.pc  nav_test.pc  rbx1_apps.pc  rbx1_bringup.pc  rbx1_description.pc  rbx1_dynamixels.pc  rbx1_nav.pc  rbx1_speech.pc  (+2 more)
src/camera_nav/: CMakeLists.txt
src/face_recognize/: CMakeLists.txt  package.xml
src/hello/hello/: CMakeLists.txt  package.xml
src/hello/hello/node/: hello.cpp
(+62 files in other folders)
